<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="101"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_expand_more_white_24dp"
        android:orderInCategory="101"
        android:title="@string/action_more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_setting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_comment"
                android:icon="@drawable/ic_comment_black_24dp"
                android:title="@string/marketcomment"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/about"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_input_black_24dp"
                android:title="@string/logout"
                android:visible="false"
                app:showAsAction="never|withText" />
        </menu>
    </item>

</menu>
