<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.swifty.fillcolor.view.ImageButton_define
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/secondrow_icon_bg"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="3dp"
        android:src="@drawable/button_save"
        android:text="@string/save"
        android:textColor="@color/gray" />

    <com.swifty.fillcolor.view.ImageButton_define
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/secondrow_icon_bg"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="3dp"
        android:src="@drawable/button_save"
        android:text="@string/open"
        android:textColor="@color/gray" />

    <com.swifty.fillcolor.view.ImageCheckBox_define
        android:id="@+id/drawline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/secondrow_icon_bg"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="3dp"
        android:src="@drawable/button_save"
        android:text="@string/drawLine"
        android:textColor="@color/gray" />

    <com.swifty.fillcolor.view.ImageButton_define
        android:id="@+id/social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/secondrow_icon_bg"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="3dp"
        android:src="@drawable/button_save"
        android:text="@string/social"
        android:textColor="@color/gray" />

    <com.swifty.fillcolor.view.ImageButton_define
        android:id="@+id/repaint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/secondrow_icon_bg"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingTop="3dp"
        android:src="@drawable/button_save"
        android:text="@string/repaint"
        android:textColor="@color/gray" />
</LinearLayout>