<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/advancelay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg2"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:visibility="gone">

            <com.swifty.fillcolor.view.ImageButton_define_secondLay
                android:id="@+id/undo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/greyundo"
                android:text="@string/undo"
                android:textColor="@color/gray" />

            <com.swifty.fillcolor.view.ImageButton_define_secondLay
                android:id="@+id/redo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/greyredo"
                android:text="@string/redo"
                android:textColor="@color/gray" />

            <com.swifty.fillcolor.view.ImageCheckBox_define
                android:id="@+id/pickcolor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/checked_pickcolor"
                android:text="@string/pickcolor"
                android:textColor="@color/gray" />

            <com.swifty.fillcolor.view.ImageCheckBox_define
                android:id="@+id/drawline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/checked_drawline"
                android:text="@string/drawLine"
                android:textColor="@color/gray" />

            <com.swifty.fillcolor.view.ImageCheckBox_define
                android:id="@+id/jianbian_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/checked_gradual"
                android:text="@string/normal_color"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/advance_color"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/lightgray_round_bg"
                android:paddingLeft="3dp"
                android:paddingTop="3dp"
                android:src="@drawable/hidebutton" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>